--- a/sites/all/themes/drupalcampnyc10/sass/global.scss
+++ b/sites/all/themes/drupalcampnyc10/sass/global.scss
@@ -113,7 +113,8 @@ h1.title {
         line-height:1.2em;         
           &:last-child {     
           } a {
-          &:hover {
+          &:hover { 
+            @include suckerfish-menu-corners;
             @include background-image(linear-gradient($menu-top-background-gradient 20%, $menu-middle-background-gradient 45%, $menu-bottom-background-gradient 85%));
           }
         }
@@ -203,14 +204,12 @@ h1.title {
   @include maintext-text-shadow;
   letter-spacing:.066em;
   color:#111;
-  
   a { 
     @include maintext-link-shadow;
   }
   font-size:1.33em;
   line-height:1.5em;  
   #content-inner {
-    
     padding:2%;
     @include content-group-corners;
     background: desaturate(lighten($content-area-background, 0),0);
@@ -523,19 +522,19 @@ tr.even, tr.odd {
     margin:0;
     line-height:.9em; 
     a {
-      color:$heading-color-1;
+      color:$heading-color-2;
     }
   }
   p {
     margin:10px 0 0 0;
     line-height:1em;
     text-align:justify;
-    color:$heading-color-2;
+    color:$heading-color-1;
     span {
       line-height:.9em;  
     }
     a {
-      color:$heading-color-2; 
+      color:$heading-color-1; 
     }
   }
   &.block {
@@ -997,21 +996,20 @@ thead th, th.active  {
     bottom: 0;
     left: 0;
     z-index:1;
-
       //@include background-image(radial-gradient(.6em .6em, white .55em, rgba(255,255,255,0) .6em) -.6em -.6em,
       //radial-gradient(1em 50%, white .35em, rgba(255,255,255,0) .4em), 
       //radial-gradient(1em 47%,  rgba(0,0,0,.4) .4em, rgba(255,255,255,0)  .43em));
-      background: -moz-radial-gradient(.6em .6em, circle, $page-background-color .59em, rgba(255,255,255,0) .6em) -.6em -.6em,
-                  -moz-radial-gradient(1em 50%, circle, $page-background-color .35em, rgba(255,255,255,.1) .3em),
+      background: -moz-radial-gradient(.6em .6em, circle, $content-area-background-flat-cover .59em, rgba(255,255,255,0) .6em) -.6em -.6em,
+                  -moz-radial-gradient(1em 50%, circle, $content-area-background-flat-cover .35em, rgba(255,255,255,.1) .3em),
                   -moz-radial-gradient(1em 47%, circle, rgba(0,0,0,.4) .4em, transparent .43em);
-      background: -o-radial-gradient(.6em .6em, circle, $page-background-color .59em, rgba(255,255,255,0) .6em) -.6em -.6em,
-                  -o-radial-gradient(1em 50%, circle, $page-background-color .35em, rgba(255,255,255,.1) .3em),
+      background: -o-radial-gradient(.6em .6em, circle, $content-area-background-flat-cover .59em, rgba(255,255,255,0) .6em) -.6em -.6em,
+                  -o-radial-gradient(1em 50%, circle, $content-area-background-flat-cover .35em, rgba(255,255,255,.1) .3em),
                   -o-radial-gradient(1em 47%, circle, rgba(0,0,0,.4) .4em, transparent .43em);
-      background: -ms-radial-gradient(.6em .6em, circle,$page-background-color .59em, rgba(255,255,255,0) .6em) -.6em -.6em,
-                  -ms-radial-gradient(1em 50%, circle, $page-background-color .35em, rgba(255,255,255,.1) .3em),
+      background: -ms-radial-gradient(.6em .6em, circle,$content-area-background-flat-cover .59em, rgba(255,255,255,0) .6em) -.6em -.6em,
+                  -ms-radial-gradient(1em 50%, circle, $content-area-background-flat-cover .35em, rgba(255,255,255,.1) .3em),
                   -ms-radial-gradient(1em 47%, circle, rgba(0,0,0,.4) .3em, transparent .33em);
-      background: -webkit-radial-gradient(.6em .6em, circle, $page-background-color .59em, rgba(255,255,255,0) .6em) -.6em -.6em,
-                  -webkit-radial-gradient(1em 50%, circle, $page-background-color .35em, rgba(255,255,255,.1) .3em),
+      background: -webkit-radial-gradient(.6em .6em, circle, $content-area-background-flat-cover .59em, rgba(255,255,255,0) .6em) -.6em -.6em,
+                  -webkit-radial-gradient(1em 50%, circle, $content-area-background-flat-cover .35em, rgba(255,255,255,.1) .3em),
                   -webkit-radial-gradient(1em 48%, circle, rgba(0,0,0,.4) .4em, transparent .43em);
     }
   &:after {
