--- a/sites/all/themes/drupalcampnyc10/sass/partials/_base.scss
+++ b/sites/all/themes/drupalcampnyc10/sass/partials/_base.scss
@@ -19,7 +19,11 @@ $menu-bottom-background:adjust-lightness($menu-background, -15%);
 $menu-middle-background-gradient:rgba($menu-middle-background,.5);
 $menu-bottom-background-gradient:rgba($menu-bottom-background,.5);
 
-$content-area-background:adjust-lightness(rgba(81,73,67,.7), 20);
+$content-area-background-flat:adjust-lightness(rgb(81,73,67), 22);
+
+$content-area-background:rgba($content-area-background-flat,.7);
+
+$content-area-background-flat-cover:(#897c72);
 
 $heading-link-color: #1950af;
 $heading-link-color-over: saturate($heading-link-color, 10%);
@@ -30,8 +34,6 @@ $menu-active-link-color: #eee;
 $menu-link-color-over: lighten($menu-link-color, 20%);
 $menu-link-color-visited: desaturate($menu-link-color, 20%);
 
-$heading-color-1:rgba(#a0aab5, 1);
-$heading-color-2:rgba(#708090, 1);
 $button-color-3:rgba(#1e2327, .9);
 
 $link-color: #e5a100;
@@ -80,7 +82,8 @@ $header-dark-gradient-color: #23201e;
   behavior: url("/dcnyc10/sites/all/themes/drupalcampnyc10/css/PIE.htc");
 }
 @mixin suckerfish-menu-corners {
-  @include border-bottom-radius($image-corners); 
+  //@include border-bottom-radius($image-corners);
+  @include border-radius(0 0 $image-corners $image-corners);  
 }
 @mixin speakers-corners {
   @include border-radius(($image-corners / 4) ($image-corners / 3) ($image-corners / 2)); 
